--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
     "install:force": "npm install --force --legacy-peer-deps"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.19",
+    "@google/generative-ai": "^0.24.1",
     "@sendgrid/mail": "^8.1.6",
     "@supabase/supabase-js": "^2.87.0",
     "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.10",
     "@types/nodemailer": "^7.0.4",
     "autoprefixer": "^10.4.22",
     "bcryptjs": "^3.0.3",
@@ -30,20 +29,15 @@
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.18.0",
-    "ioredis": "^5.8.2",
-    "jsonwebtoken": "^9.0.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.294.0",
     "next": "^14.0.4",
     "nodemailer": "^7.0.11",
     "postcss": "^8.5.6",
-    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.68.0",
-    "redis": "^5.10.0",
     "resend": "^6.6.0",
-    "speakeasy": "^2.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.19"
   },
@@ -53,7 +47,6 @@
     "@types/node": "^20.19.26",
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
-    "@types/speakeasy": "^2.0.10",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.0.4",
     "typescript": "^5.9.3"
